gateway-api/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default-auth
  namespace: bighw
spec:
  mtls:
    mode: STRICT
